add file and edit my page
add img

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
   <link href="lib/animate/animate.min.css" rel="stylesheet">
   <link href="lib/ionicons/css/ionicons.min.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
   <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
   <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
 
@@ -53,13 +54,13 @@
             <a class="nav-link js-scroll" href="#about">About</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link js-scroll" href="#Interests">Interests</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link js-scroll" href="#Publications">Publications</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll" href="#Projects">Projects</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll" href="#blog">Blog</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll" href="#contact">Contact</a>
@@ -71,14 +72,14 @@
   <!--/ Nav End /-->
 
   <!--/ Intro Skew Star /-->
-  <div id="home" class="intro route bg-image" style="background-image: url(img/intro-bg.jpg)">
+  <div id="home" class="intro route bg-image" style="background-image: url(img/intro-bg.png)">
     <div class="overlay-itro"></div>
     <div class="intro-content display-table">
       <div class="table-cell">
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
-          <h1 class="intro-title mb-4">I am Morgan Freeman</h1>
-          <p class="intro-subtitle"><span class="text-slider-items">CEO DevFolio,Web Developer,Web Designer,Frontend Developer,Graphic Designer</span><strong class="text-slider"></strong></p>
+          <h1 class="intro-title mb-4">Hello I'm Dong-Uk Kim</h1>
+          <p class="intro-subtitle"><span class="text-slider-items">HCI Researcher,Chung-Ang University Student, Hybirid Engineer and Designer</span><strong class="text-slider"></strong></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
       </div>
@@ -96,15 +97,15 @@
                 <div class="row">
                   <div class="col-sm-6 col-md-5">
                     <div class="about-img">
-                      <img src="img/testimonial-2.jpg" class="img-fluid rounded b-shadow-a" alt="">
+                      <img src="img/Profile.png" class="img-fluid rounded b-shadow-a" alt="">
                     </div>
                   </div>
                   <div class="col-sm-6 col-md-7">
                     <div class="about-info">
-                      <p><span class="title-s">Name: </span> <span>Morgan Freeman</span></p>
-                      <p><span class="title-s">Profile: </span> <span>full stack developer</span></p>
-                      <p><span class="title-s">Email: </span> <span>contact@example.com</span></p>
-                      <p><span class="title-s">Phone: </span> <span>(617) 557-0089</span></p>
+                      <p><span class="title-s">Name: </span> <span>Dong-Uk (Owen) Kim</span></p>
+                      <p><span class="title-s">Profile: </span> <span>HCI Researcher</span></p>
+                      <p><span class="title-s">Email: </span> <span>kimdu0301@gmail.com</span></p>
+                      <p><span class="title-s">School: </span> <span>Chung-Ang University</span></p>
                     </div>
                   </div>
                 </div>
@@ -164,17 +165,17 @@
     </div>
   </section>
 
-  <!--/ Section Publications Star /-->
-  <section id="Publications" class="Publications-mf route">
+  <!--/ Section Interests Star /-->
+  <section id="Interests" class="Interests-mf route">
     <div class="container">
       <div class="row">
         <div class="col-sm-12">
           <div class="title-box text-center">
             <h3 class="title-a">
-              Publications
+              Interests
             </h3>
             <p class="subtitle-a">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              I focus on the 6 interests to address the issues 
             </p>
             <div class="line-mf"></div>
           </div>
@@ -182,91 +183,91 @@
       </div>
       <div class="row">
         <div class="col-md-4">
-          <div class="Publications-box">
-            <div class="Publications-ico">
-              <span class="ico-circle"><i class="ion-monitor"></i></span>
+          <div class="Interests-box_1">
+            <div class="Interests-ico">
+              <span class="ico-circle"><i class="fa-solid fa-laptop-code"></i></span>
             </div>
-            <div class="Publications-content">
-              <h2 class="s-title">Web Design</h2>
+            <div class="Interests-content">
+              <h2 class="s-title">Human Computer Interaction</h2>
               <p class="s-description text-center">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
+                <!-- Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
                 provident vitae! Magni
-                tempora perferendis eum non provident.
+                tempora perferendis eum non provident. -->
               </p>
             </div>
           </div>
         </div>
         <div class="col-md-4">
-          <div class="Publications-box">
-            <div class="Publications-ico">
-              <span class="ico-circle"><i class="ion-code-working"></i></span>
+          <div class="Interests-box">
+            <div class="Interests-ico">
+              <span class="ico-circle"><i class="fa-solid fa-users"></i></span>
             </div>
-            <div class="Publications-content">
-              <h2 class="s-title">Web Development</h2>
+            <div class="Interests-content">
+              <h2 class="s-title">User Experience</h2>
               <p class="s-description text-center">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
+                <!-- Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
                 provident vitae! Magni
-                tempora perferendis eum non provident.
+                tempora perferendis eum non provident. -->
               </p>
             </div>
           </div>
         </div>
         <div class="col-md-4">
-          <div class="Publications-box">
-            <div class="Publications-ico">
-              <span class="ico-circle"><i class="ion-camera"></i></span>
+          <div class="Interests-box">
+            <div class="Interests-ico">
+              <span class="ico-circle"><i class="fa-solid fa-microscope"></i></span>
             </div>
-            <div class="Publications-content">
-              <h2 class="s-title">Photography</h2>
+            <div class="Interests-content">
+              <h2 class="s-title">Fabrication</h2>
               <p class="s-description text-center">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
+                <!-- Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
                 provident vitae! Magni
-                tempora perferendis eum non provident.
+                tempora perferendis eum non provident. -->
               </p>
             </div>
           </div>
         </div>
         <div class="col-md-4">
-          <div class="Publications-box">
-            <div class="Publications-ico">
-              <span class="ico-circle"><i class="ion-android-phone-portrait"></i></span>
+          <div class="Interests-box">
+            <div class="Interests-ico">
+              <span class="ico-circle"><i class="fa-brands fa-accessible-icon"></i></span>
             </div>
-            <div class="Publications-content">
-              <h2 class="s-title">Responsive Design</h2>
+            <div class="Interests-content">
+              <h2 class="s-title">Accessibility</h2>
               <p class="s-description text-center">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
+                <!-- Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
                 provident vitae! Magni
-                tempora perferendis eum non provident.
+                tempora perferendis eum non provident. -->
               </p>
             </div>
           </div>
         </div>
         <div class="col-md-4">
-          <div class="Publications-box">
-            <div class="Publications-ico">
-              <span class="ico-circle"><i class="ion-paintbrush"></i></span>
+          <div class="Interests-box">
+            <div class="Interests-ico">
+              <span class="ico-circle"><i class="fa-solid fa-child"></i></span>
             </div>
-            <div class="Publications-content">
-              <h2 class="s-title">Graphic Design</h2>
+            <div class="Interests-content">
+              <h2 class="s-title">Child</h2>
               <p class="s-description text-center">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
+                <!-- Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
                 provident vitae! Magni
-                tempora perferendis eum non provident.
+                tempora perferendis eum non provident. -->
               </p>
             </div>
           </div>
         </div>
         <div class="col-md-4">
-          <div class="Publications-box">
-            <div class="Publications-ico">
-              <span class="ico-circle"><i class="ion-stats-bars"></i></span>
+          <div class="Interests-box">
+            <div class="Interests-ico">
+              <span class="ico-circle"><i class="fa-solid fa-notes-medical"></i></span>
             </div>
-            <div class="Publications-content">
-              <h2 class="s-title">Marketing Publicationss</h2>
+            <div class="Interests-content">
+              <h2 class="s-title">Healthcare</h2>
               <p class="s-description text-center">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
+                <!-- Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
                 provident vitae! Magni
-                tempora perferendis eum non provident.
+                tempora perferendis eum non provident. -->
               </p>
             </div>
           </div>
@@ -274,7 +275,7 @@
       </div>
     </div>
   </section>
-  <!--/ Section Publications End /-->
+  <!--/ Section Interests End /-->
 
   <div class="section-counter paralax-mf bg-image" style="background-image: url(img/counters-bg.jpg)">
     <div class="overlay-mf"></div>
@@ -283,11 +284,11 @@
         <div class="col-sm-3 col-lg-3">
           <div class="counter-box">
             <div class="counter-ico">
-              <span class="ico-circle"><i class="ion-checkmark-round"></i></span>
+              <span class="ico-circle"><i class="fa-solid fa-file-circle-check"></i></span>
             </div>
             <div class="counter-num">
-              <p class="counter">450</p>
-              <span class="counter-text">WORKS COMPLETED</span>
+              <p class="counter">1</p>
+              <span class="counter-text">PUBLICATIONS</span>
             </div>
           </div>
         </div>
@@ -298,11 +299,11 @@
             </div>
             <div class="counter-num">
               <p class="counter">15</p>
-              <span class="counter-text">YEARS OF EXPERIENCE</span>
+              <span class="counter-text">PROJECTS</span>
             </div>
           </div>
         </div>
-        <div class="col-sm-3 col-lg-3">
+        <!-- <div class="col-sm-3 col-lg-3">
           <div class="counter-box pt-4 pt-md-0">
             <div class="counter-ico">
               <span class="ico-circle"><i class="ion-ios-people"></i></span>
@@ -312,14 +313,14 @@
               <span class="counter-text">TOTAL CLIENTS</span>
             </div>
           </div>
-        </div>
+        </div> -->
         <div class="col-sm-3 col-lg-3">
           <div class="counter-box pt-4 pt-md-0">
             <div class="counter-ico">
               <span class="ico-circle"><i class="ion-ribbon-a"></i></span>
             </div>
             <div class="counter-num">
-              <p class="counter">36</p>
+              <p class="counter">3</p>
               <span class="counter-text">AWARD WON</span>
             </div>
           </div>
@@ -328,14 +329,14 @@
     </div>
   </div>
 
-  <!--/ Section Portfolio Star /-->
-  <section id="work" class="portfolio-mf sect-pt4 route">
+  <!--/ Section Publications Star /-->
+  <section id="Publications" class="Publications-mf sect-pt4 route">
     <div class="container">
       <div class="row">
         <div class="col-sm-12">
           <div class="title-box text-center">
             <h3 class="title-a">
-              Portfolio
+              Publications
             </h3>
             <p class="subtitle-a">
               Lorem ipsum, dolor sit amet consectetur adipisicing elit.
@@ -493,7 +494,7 @@
       </div>
     </div>
   </section>
-  <!--/ Section Portfolio End /-->
+  <!--/ Section Publications End /-->
 
   <!--/ Section Testimonials Star /-->
   <div class="testimonials paralax-mf bg-image" style="background-image: url(img/overlay-bg.jpg)">
@@ -534,14 +535,14 @@
     </div>
   </div>
 
-  <!--/ Section Blog Star /-->
-  <section id="blog" class="blog-mf sect-pt4 route">
+  <!--/ Section Projects Star /-->
+  <section id="Projects" class="Projects-mf sect-pt4 route">
     <div class="container">
       <div class="row">
         <div class="col-sm-12">
           <div class="title-box text-center">
             <h3 class="title-a">
-              Blog
+              Projects
             </h3>
             <p class="subtitle-a">
               Lorem ipsum, dolor sit amet consectetur adipisicing elit.
@@ -552,9 +553,9 @@
       </div>
       <div class="row">
         <div class="col-md-4">
-          <div class="card card-blog">
+          <div class="card card-Projects">
             <div class="card-img">
-              <a href="blog-single.html"><img src="img/post-1.jpg" alt="" class="img-fluid"></a>
+              <a href="Projects-single.html"><img src="img/post-1.jpg" alt="" class="img-fluid"></a>
             </div>
             <div class="card-body">
               <div class="card-category-box">
@@ -562,7 +563,7 @@
                   <h6 class="category">Travel</h6>
                 </div>
               </div>
-              <h3 class="card-title"><a href="blog-single.html">See more ideas about Travel</a></h3>
+              <h3 class="card-title"><a href="Projects-single.html">See more ideas about Travel</a></h3>
               <p class="card-description">
                 Proin eget tortor risus. Pellentesque in ipsum id orci porta dapibus. Praesent sapien massa, convallis
                 a pellentesque nec,
@@ -583,9 +584,9 @@
           </div>
         </div>
         <div class="col-md-4">
-          <div class="card card-blog">
+          <div class="card card-Projects">
             <div class="card-img">
-              <a href="blog-single.html"><img src="img/post-2.jpg" alt="" class="img-fluid"></a>
+              <a href="Projects-single.html"><img src="img/post-2.jpg" alt="" class="img-fluid"></a>
             </div>
             <div class="card-body">
               <div class="card-category-box">
@@ -593,7 +594,7 @@
                   <h6 class="category">Web Design</h6>
                 </div>
               </div>
-              <h3 class="card-title"><a href="blog-single.html">See more ideas about Travel</a></h3>
+              <h3 class="card-title"><a href="Projects-single.html">See more ideas about Travel</a></h3>
               <p class="card-description">
                 Proin eget tortor risus. Pellentesque in ipsum id orci porta dapibus. Praesent sapien massa, convallis
                 a pellentesque nec,
@@ -614,9 +615,9 @@
           </div>
         </div>
         <div class="col-md-4">
-          <div class="card card-blog">
+          <div class="card card-Projects">
             <div class="card-img">
-              <a href="blog-single.html"><img src="img/post-3.jpg" alt="" class="img-fluid"></a>
+              <a href="Projects-single.html"><img src="img/post-3.jpg" alt="" class="img-fluid"></a>
             </div>
             <div class="card-body">
               <div class="card-category-box">
@@ -624,7 +625,7 @@
                   <h6 class="category">Web Design</h6>
                 </div>
               </div>
-              <h3 class="card-title"><a href="blog-single.html">See more ideas about Travel</a></h3>
+              <h3 class="card-title"><a href="Projects-single.html">See more ideas about Travel</a></h3>
               <p class="card-description">
                 Proin eget tortor risus. Pellentesque in ipsum id orci porta dapibus. Praesent sapien massa, convallis
                 a pellentesque nec,
@@ -647,7 +648,7 @@
       </div>
     </div>
   </section>
-  <!--/ Section Blog End /-->
+  <!--/ Section Projects End /-->
 
   <!--/ Section Contact-Footer Star /-->
   <section class="paralax-mf footer-paralax bg-image sect-mt4 route" style="background-image: url(img/overlay-bg.jpg)">
